--- a/sushi_Site/style.css
+++ b/sushi_Site/style.css
@@ -1,159 +1,196 @@
 body {
-    margin: 0;
-    font-family: 'Open Sans', sans-serif;
+  margin: 0;
+  font-family: "Open Sans", sans-serif;
 }
 
 .container {
-    margin: 0px 166px;
+  margin: 0px 166px;
 }
 
 .header {
-    background-image: url(BGIMG.png);
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url(BGIMG.png);
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .header-line {
-    padding-top: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
+  padding-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .header-logo {
-    margin-right: -5px;
+  margin-right: -5px;
 }
 
 .nav-item {
-    color: #fff;
-    text-decoration: none;
-    font-weight: 700;
-    font-size: 14px;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 14px;
 
-    margin-right: 20px;
+  margin-right: 20px;
 
-    transition: color .3s linear;
-    width: 300px;
+  transition: color 0.3s linear;
+  width: 300px;
 }
 
 .nav-item-last {
-    margin-right: 50px;
-    ;
+  margin-right: 50px;
 }
 
 .nav-item:hover {
-    color: #dc1111;
+  color: #dc1111;
 }
 
 .cart {
-    position: relative;
-    border-right: 3px solid #FFFFFF;
-    padding-right: 10px;
-    height: 50px;
-    padding-left: 50px;
+  position: relative;
+  border-right: 3px solid #ffffff;
+  padding-right: 10px;
+  height: 50px;
+  padding-left: 50px;
 }
 
 .cart-img {
-    position: absolute;
-    /*не откого не зависит*/
-    top: 18px;
-    right: 7px;
+  position: absolute;
+  /*не откого не зависит*/
+  top: 18px;
+  right: 7px;
 }
 
 .num {
-    text-decoration: none;
-    color: #fff;
-    font-weight: 700;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 700;
 
-    transition: color .3s linear;
+  transition: color 0.3s linear;
 }
 
 .num:hover {
-    color: #dc1111;
+  color: #dc1111;
 }
 
 .phone-text {
-    font-size: 14px;
-    font-weight: 400;
-    color: #fff;
+  font-size: 14px;
+  font-weight: 400;
+  color: #fff;
 }
 
 .phone-holder {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .button {
-    background-color: #ff7400;
-    text-decoration: none;
-    color: #fff;
-    padding: 14px 17px;
-    font-weight: 700;
-    border-radius: 5px;
+  background-color: #ff7400;
+  text-decoration: none;
+  color: #fff;
+  padding: 14px 17px;
+  font-weight: 700;
+  border-radius: 5px;
 
-    transition: background-color .3s linear;
+  transition: background-color 0.3s linear;
 }
 
 .button:hover {
-    background-color: #a25618;
+  background-color: #a25618;
 }
 
 .header-down {
-    position: relative;
+  position: relative;
 }
 
 .header-title {
-    color: #d67e35;
-    font-family: 'Tinos', serif;
-    font-size: 50px;
-    font-weight: 400;
+  color: #d67e35;
+  font-family: "Tinos", serif;
+  font-size: 50px;
+  font-weight: 400;
 
-    text-align: center;
-    position: absolute;
-    left: 0;
-    margin-top: 222px;
-    margin-bottom: 12px;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  margin-top: 222px;
+  margin-bottom: 12px;
 }
 
 .header-suptitle:before {
-    position: absolute;
-    content: '';
-    width: 61px;
-    height: 2px;
-    background-color: #c4c4c4;
-    top: 127px;
-    left: 56px;
+  position: absolute;
+  content: "";
+  width: 61px;
+  height: 2px;
+  background-color: #c4c4c4;
+  top: 127px;
+  left: 56px;
 }
 
 .header-suptitle {
-    color: #fff;
-    font-size: 18px;
-    font-family: 'Open Sans', sans-serif;
+  color: #fff;
+  font-size: 18px;
+  font-family: "Open Sans", sans-serif;
 }
 
 .header-suptitle:after {
-    position: absolute;
-    content: '';
-    width: 61px;
-    height: 2px;
-    background-color: #c4c4c4;
-    top: 127px;
-    left: 308px;
+  position: absolute;
+  content: "";
+  width: 61px;
+  height: 2px;
+  background-color: #c4c4c4;
+  top: 127px;
+  left: 308px;
 }
 
 .header-button {
-    background-color: #ff7400;
-    color: #fff;
-    padding: 14px 28px;
-    font-size: 14px;
-    font-weight: 700;
-    font-family: 'Open Sans', sans-serif;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color .3s linear;
+  background-color: #ff7400;
+  color: #fff;
+  padding: 14px 28px;
+  font-size: 14px;
+  font-weight: 700;
+  font-family: "Open Sans", sans-serif;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s linear;
 }
 
 .header-button:hover {
-    background-color: #a25618;
+  background-color: #a25618;
 }
+.cards-holder {
+  display: flex; /**расположение в строку, а не встрочку**/
+  justify-content: center;
+}
+.card {
+  box-shadow: 10px 10px 40px 20px #0000001a;
+  width: 349px;
+  margin-right: 31px;
+  background-color: #fff;
+  margin-top: -80px;
+  padding: 0px 10px;
+}
+.card-image {
+  display: flex;
+  justify-content: center;
+  padding-top: 31px;
+}
+.card-title {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+
+  font-family: "Tinos", serif;
+  font-size: 26px;
+  font-weight: 400;
+}
+.card-title span{
+    color: #d67e35;
+}
+.card-desc {
+  text-align: center;
+
+  font-family: "Tinos", serif;
+  font-size: 26px;
+  font-weight: 400;
+  color: #656363;
+}
+
