--- a/sushi_Site/style.css
+++ b/sushi_Site/style.css
@@ -166,7 +166,7 @@ body {
   margin-right: 31px;
   background-color: #fff;
   margin-top: -80px;
-  padding: 0px 10px;
+  padding: 10px 10px;
 }
 .card-image {
   display: flex;
@@ -182,8 +182,9 @@ body {
   font-size: 26px;
   font-weight: 400;
 }
-.card-title span{
-    color: #d67e35;
+.card-title span {
+  color: #d67e35;
+  margin-left: 4px;
 }
 .card-desc {
   text-align: center;
@@ -193,4 +194,79 @@ body {
   font-weight: 400;
   color: #656363;
 }
-
+.history {
+  margin-top: 166px;
+}
+.history-holder {
+  display: flex;
+}
+.history-wrapper {
+  width: 444px;
+  height: 442px;
+}
+.history-title {
+  height: 62px;
+  color: #000000;
+  font-family: "Tinos", serif;
+  font-weight: 400;
+  font-size: 54px;
+  line-height: 62px;
+  text-align: center;
+  margin-bottom: 21px;
+}
+.history-title span {
+  color: #d67e34;
+}
+.histry-desc {
+  height: 217px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+  color: #656363;
+}
+.history-number {
+  display: flex;
+  justify-content: center;
+}
+.number-item {
+  margin-right: 60px;
+  color: #bc9060;
+  text-align: center;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 54px;
+}
+.number-item span {
+  display: block;
+  color: #000000;
+  font-size: 20px;
+  line-height: 24px;
+}
+.history-images {
+  position: relative;
+}
+.imgages-1 {
+  position: absolute;
+  z-index: 999;
+  top: 35px;
+  left: 392px;
+  width: 233px;
+  height: 300px;
+}
+.imgages-2 {
+  position: absolute;
+  z-index: -1;
+  top: -57px;
+  left: 541px;
+  width: 255px;
+  height: 430px;
+}
+.imgages-3 {
+  position: absolute;
+  z-index: 1;
+  top: 146px;
+  left: 637px;
+  width: 254px;
+  height: 300px;
+}
