--- a/sushi_Site/style.css
+++ b/sushi_Site/style.css
@@ -196,6 +196,7 @@ body {
 }
 .history {
   margin-top: 166px;
+  padding-bottom: 200px;
 }
 .history-holder {
   display: flex;
@@ -269,4 +270,44 @@ body {
   left: 637px;
   width: 254px;
   height: 300px;
+}
+.black-block {
+  background-image: url(bb.png);
+  background-size: 1920px;
+  background-repeat: no-repeat;
+  padding: 80px 0px;
+}
+.left {
+}
+.left-title {
+  color: #ff7400;
+  font-family: "Tinos", serif;
+  font-size: 52px;
+  font-weight: 400;
+}
+.left-text {
+  color: #fff;
+  font-weight: 700;
+  font-size: 24px;
+}
+.right {
+}
+.right-btn {
+  background-color: #ff7400;
+  text-decoration: none;
+  color: #fff;
+  padding: 14px 17px;
+  font-weight: 700;
+  border-radius: 5px;
+  margin-left: -238px;
+
+  transition: background-color 0.3s linear;
+}
+.right-btn:hover {
+  background-color: #a25618;
+}
+.block-holder {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
