--- a/sushi_Site/style.css
+++ b/sushi_Site/style.css
@@ -311,3 +311,33 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+.dishes-title{
+  font-family: "Tinos", serif;
+  font-weight: 400;
+  font-size: 52px;
+  text-align: center;
+  padding-top: 132px;
+  margin-bottom: 139px;
+}
+.dishes-title span{
+ color: #D67E34;
+}
+.burgers{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+}
+.burger-item{
+  display: flex;
+  align-items: center;
+  margin-bottom: 29px;
+}
+.burger-image{
+  margin-right: 250px;
+}
+.burger-text{
+  font-family: "Tinos", serif;
+  font-weight: 400;
+  font-size: 26px;
+  margin-left: 20px;
+}
