--- a/sushi_Site/style.css
+++ b/sushi_Site/style.css
@@ -662,6 +662,12 @@ body {
   }
 }
 @media (max-width: 1000px) {
+  .header-down{
+    margin-top: 150px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
   .cards-holder {
     display: block;
   }
@@ -768,6 +774,10 @@ body {
   .burger-image {
     display: none;
   }
+  .history-number {
+    padding-top: 69px;
+    text-align: center;
+  }
 }
 
 @media (max-width: 700px) {
@@ -775,13 +785,19 @@ body {
     padding-bottom: 69px;
   }
   .history-number {
-    padding-top: 69px;
+    padding-top: 80px;
+    text-align: center;
   }
   .menu-item1 {
     width: auto;
   }
   .menu-img1 {
-    width: 100px;
-    height: 100px;
+    width: auto;
+  }
+  .menu-text1{
+    font-size: 30px;
+  }
+  .menu-subtext1{
+    font-size: 25px;
   }
 }
