--- a/sushi_Site/style.css
+++ b/sushi_Site/style.css
@@ -1,6 +1,14 @@
+html{
+  scroll-behavior: smooth!important;
+}
+
 body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
+}
+
+#our-menu {
+  scroll-behavior: smooth!important;
 }
 
 .container {
@@ -8,7 +16,7 @@ body {
 }
 
 .header {
-  background-image: url(BGIMG.png);
+  background-image: url(./photo/BGIMG.png);
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
@@ -123,6 +131,15 @@ body {
   background-color: #c4c4c4;
   top: 127px;
   left: 56px;
+}
+.header-down.english {
+margin-left: 126px;
+}
+.header-suptitle.english:before{
+  left: -50px;
+}
+.header-suptitle.english:after{
+  left: 250px;
 }
 
 .header-suptitle {
@@ -293,7 +310,7 @@ body {
 }
 
 .black-block {
-  background-image: url(bb.png);
+  background-image: url(./photo/bb.png);
   background-size: cover;
   background-repeat: no-repeat;
   padding: 80px 0px;
@@ -371,7 +388,7 @@ body {
 }
 
 .menu {
-  background-image: url(menu-bg.png);
+  background-image: url(./photo/menu-bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 100px;
